Add more API doc and javadoc
